# ml_api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5cabaad4f17e_add_news_model.py
common/: database.py
common/config/: config.py  logging_config.py
common/models/: __init__.py  news.py
common/schemas/: news_schema.py
news/providers/: news_provider.py
news/repositories/: news_repository.py
news/routers/: api.py
news/routers/v1/: news.py
news/services/: news_service.py
